--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,6 +1,12 @@
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
+            <div>
+            <form id="form" action="ajaxupload.php" method="post" enctype="multipart/form-data">
+                <input id="uploadImage" type="file" name="archivo" />
+                <input class="btn btn-success" type="submit" value="Upload">
+            </form>
+            </div>
             <div class="panel-heading">
                 <h3 class="panel-title">Movimientos</h3>
             </div>
@@ -22,3 +28,39 @@
         </div>
     </div>
 </div>
+
+<script>
+var url = '<?= $this->serverUrl(); ?>';
+
+$(document).ready(function (e) {
+    $("#form").on('submit',(function(e) {
+    e.preventDefault();
+    $.ajax({
+        url: url + '/',
+        type: "POST",
+        data:  new FormData(this),
+        contentType: false,
+        cache: false,
+        processData:false,
+        beforeSend : function()
+        {
+            //$("#preview").fadeOut();
+            $("#err").fadeOut();
+        },
+        success: function(data){
+            if(data=='invalid'){
+                // invalid file format.
+                $("#err").html("Invalid File !").fadeIn();
+            }else{
+                // view uploaded file.
+                $("#preview").html(data).fadeIn();
+                $("#form")[0].reset(); 
+            }
+        },
+        error: function(e) {
+            $("#err").html(e).fadeIn();
+        }          
+        });
+    }));
+});
+</script>
