--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -85,9 +85,8 @@ $(document).ready(function (e) {
                     // invalid file format.
                     $("#err").html("Invalid File !").fadeIn();
                 }else{
-                    // view uploaded file.
-                    $("#preview").html(data).fadeIn();
-                    $("#form")[0].reset(); 
+                    arrMovimientosJSON = jQuery.parseJSON(data);
+                    dibujarTablaMovimientos();
                 }
             },
             error: function(e) {
