avances edicion de categoria movimiento

--- a/module/Application/view/application/conf/motivos-movimiento.phtml
+++ b/module/Application/view/application/conf/motivos-movimiento.phtml
@@ -1,30 +1,28 @@
 <div class="form-row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Listado de Motivos</h3>
-                </div>
-                <div class="panel-body">
-                    <table id="tablaMotivos" class="footable table table-stripped toggle-arrow-tiny no-borders">
-                        <thead>
-                            <tr>
-                                <th class="text-center">Motivo</th>
-                                <th class="text-center">Categoria Movimiento</th>
-                                <th class="text-center">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="bodyMotivos">
-                        </tbody>
-                    </table>
-                </div>
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="">Listado de Motivos</h3>
+            </div>
+            <div class="card-body">
+                <table id="tablaMotivos" class="footable table table-stripped toggle-arrow-tiny no-borders">
+                    <thead>
+                        <tr>
+                            <th class="text-center">Motivo</th>
+                            <th class="text-center">Categoria Movimiento</th>
+                            <th class="text-center">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="bodyMotivos">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-
 </div>
+
 <script>
     var arrMotivoMovimientoJSON = <?= $arrMotivoMovimientoJSON; ?>;
-
 
     function dibujarTablaMotivos(){
         $('#bodyMotivos').find('tr').remove();
@@ -47,7 +45,35 @@
             }else{
                 categoria.innerHTML = "";
             }
+
+            dibujarAccionesDeMotivo(acciones, motivo);
         }
+    }
+
+    function agregarBotonEditar(contenedor, motivo){
+        var icon = document.createElement('i');
+        icon.setAttribute('class','fas fa-pencil-alt');
+        var a = document.createElement('a');
+        a.setAttribute('class','btn btn-success btn-circle btn-outline');
+        a.setAttribute('href', url + '/conf/motivosMovimiento/editar/'+ motivo.id);
+        a.appendChild(icon);
+        contenedor.appendChild(a);
+        contenedor.setAttribute('title', 'Editar Motivo Movimiento');
+    }
+
+
+    function dibujarAccionesDeMotivo(contenedor, motivo){
+        var divFila = document.createElement('div');
+        divFila.setAttribute('class','form-row');
+        // Agrega boton de editar
+        var divPDF = document.createElement('div');
+        divPDF.setAttribute('class','col-md-4');
+        
+        agregarBotonEditar(divPDF, motivo);
+        divFila.appendChild(divPDF);
+        
+        //Fin de agregar botones
+        contenedor.appendChild(divFila);
     }
 
     $(document).ready(function (e) {
