Agrega edicion de categorias

--- a/module/Application/view/application/conf/index.phtml
+++ b/module/Application/view/application/conf/index.phtml
@@ -3,3 +3,8 @@
         <a href="<?= $this->url("conf/motivosMovimiento", ["action" => "listarMotivos"]) ?>">Motivo Movimientos</a>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <a href="<?= $this->url("conf/categoriaMovimiento", ["action" => "listarCategorias"]) ?>">Categoria Movimientos</a>
+    </div>
+</div>
