Agrega edicion de tipo de movimiento

--- a/module/Application/view/application/conf/index.phtml
+++ b/module/Application/view/application/conf/index.phtml
@@ -8,3 +8,8 @@
         <a href="<?= $this->url("conf/categoriaMovimiento", ["action" => "listarCategorias"]) ?>">Categoria Movimientos</a>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <a href="<?= $this->url("conf/tiposMovimiento", ["action" => "listarTiposMovimiento"]) ?>">Tipos de Movimientos</a>
+    </div>
+</div>
