Avances en la seleccion de periodo

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,13 +1,18 @@
 <div class="row">
     <div class="col-md-12">
         <div>
-            <form id="form" action="ajaxupload.php" method="post" enctype="multipart/form-data">
-                <input id="uploadImage" type="file" name="archivo" />
-                <input class="btn btn-success" type="submit" value="Upload">
+            <form id="form" action="ajaxupload.php" method="post" enctype="multipart/form-data" class="mt-3">
+                <div class="form-row">
+                    <div class="col-md-4">
+                        <input id="uploadImage" type="file" name="archivo" class="form-control"/>
+                    </div>
+                    <div class="col-md-1 offset-1">
+                        <input class="btn btn-success" type="submit" value="Subir">
+                    </div>
+                </div>
             </form>
         </div>
         <div class="card mt-3">
-            
             <div class="card-header">
                 <h3 class="">Movimientos</h3>
             </div>
@@ -22,6 +27,43 @@
                         </tr>
                     </thead>
                     <tbody id="bodyMovimientos">
+                    
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="card mt-3">
+            <div class="card-header">
+                <h3 class="">Primeros reportes</h3>
+            </div>
+            <div class="card-body" id="">
+                <div class="form-row">
+                    <div class="col-md-2">
+                        <label for="">Selección del Periodo:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="fechas" id="fechas" class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mt-3">
+            <div class="card-header">
+                <h3 class="">Movimientos en Periodo Seleccionado</h3>
+            </div>
+            <div class="card-body" id="divMovPeriodo">
+                <table id="tablaMovimientosPeriodo" class="table table-hover">
+                    <thead>
+                        <tr class="">
+                            <th class="text-center">Fecha</th>
+                            <th class="text-center">Motivo</th>
+                            <th class="text-center">Detalle</th>
+                            <th class="text-center">Valor</th>
+                        </tr>
+                    </thead>
+                    <tbody id="bodyMovimientosPeriodo">
                     
                     </tbody>
                 </table>
@@ -89,5 +131,98 @@ $(document).ready(function (e) {
             }          
         });
     }));
+
+    //REPORTES
+    $('input[name="fechas"]').daterangepicker({
+        locale: {
+            format: 'DD/MM/YYYY',
+            applyLabel: "Aplicar",
+            cancelLabel: "Cancelar",
+            fromLabel: "Desde",
+            toLabel: "Hasta",
+            customRangeLabel: "Personalizado",
+            daysOfWeek: [
+                "Dom",
+                "Lun",
+                "Mar",
+                "Mie",
+                "Jue",
+                "Vie",
+                "Sab"
+            ],
+            monthNames: [
+                "Enero",
+                "Febrero",
+                "Marzo",
+                "Abril",
+                "Mayo",
+                "Junio",
+                "Julio",
+                "Agosto",
+                "Septiembre",
+                "Octubre",
+                "Noviembre",
+                "Diciembre"
+            ]
+        },
+        // minDate: , //La fecha minima de movimientos
+        // maxDate: , //fecha maxima de movimientos
+        ranges: {
+            'Ayer': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+            'Últimos 7 Días': [moment().subtract(6, 'days'), moment()],
+            'Últimos 30 Días': [moment().subtract(29, 'days'), moment()],
+            'Este Mes': [moment().startOf('month'), moment().endOf('month')],
+            'Mes Anterior': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+        },
+        alwaysShowCalendars: true,
+    });
+
+    
 });
+
+    var fechaInicialSelec = '';
+    var fechaFinalSelec = '';
+
+$('#fechas').on('apply.daterangepicker', function(ev, picker) {
+        console.log(picker.startDate.format('YYYY-MM-DD'));
+        console.log(picker.endDate);
+        var fecha = moment("12/06/2019", "DD/MM/YYYY");
+        console.log(picker.startDate.diff(fecha)); //Devuelve negativo si la fecha es mayor
+        console.log(picker.endDate.diff(fecha)); //Devuelve positivo si la fecha es menor
+        dibujarTablaMovimientosPeriodo(picker.startDate, picker.endDate);
+});
+
+function dibujarTablaMovimientosPeriodo(fechaInicial, fechaFinal){
+    $('#bodyMovimientosPeriodo').find('tr').remove();
+    
+    for (var i = 0; i < arrMovimientosJSON.length; i++)
+    {
+        var movimiento = arrMovimientosJSON[i];
+        var fechaMov = moment(movimiento.fecha.substring(0, 10), "YYYY-MM-DD");
+        if ((fechaInicial.diff(fechaMov) < 0) && (fechaFinal.diff(fechaMov) > 0)){
+            var body = document.getElementById("bodyMovimientosPeriodo");
+            var row = body.insertRow();
+            
+            row.id = i;
+            
+            var fecha = row.insertCell(0);
+            var motivo = row.insertCell(1);
+            var detalle = row.insertCell(2);
+            var valor = row.insertCell(3);
+            
+            fecha.innerHTML = movimiento.fecha.substring(0,16);
+            motivo.innerHTML = movimiento.motivoMovimiento.descripcion;
+            detalle.innerHTML = movimiento.descripcion;
+            valor.innerHTML = movimiento.valor;
+            
+            if (parseFloat(movimiento.valor) > 0){
+                // row.classList.add("table-success");
+                valor.style.color = 'green';
+            }else{
+                // row.classList.add("table-danger");
+                valor.style.color = 'red';
+            }
+        }
+    }
+}
 </script>
