Ajustes y creacion de pagina de reportes

--- a/module/Application/view/application/conf/listar-categorias.phtml
+++ b/module/Application/view/application/conf/listar-categorias.phtml
@@ -18,6 +18,15 @@
                 </table>
             </div>
         </div>
+        <div class="form-row mt-3">
+            <div class="col-md-1">
+                <a href="<?= $this->url("conf", ["action" => "index"]) ?>">
+                    <div class="btn btn-default">
+                        Volver
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
