--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -41,6 +41,8 @@
                     <a class="navbar-brand" href="<?= $this->url('home') ?>">
                         <img src="<?= $this->basePath('img/zf-logo-mark.svg') ?>" height="28"/>&nbsp;Inicio
                     </a>
+                    <a class="navbar-brand" href="<?= $this->url("reportes", ["action" => "index"]) ?>">&nbsp;Reportes</a>
+                    <a class="navbar-brand" href="<?= $this->url("conf", ["action" => "index"]) ?>">&nbsp;Configuración</a>
                 </div>
             </div>
         </nav>
