Agrega reporte de compras con debito

--- a/module/Application/view/application/reportes/index.phtml
+++ b/module/Application/view/application/reportes/index.phtml
@@ -3,3 +3,8 @@
         <a href="<?= $this->url("reportes", ["action" => "general"]) ?>">Reporte General</a>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <a href="<?= $this->url("reportes", ["action" => "comprasDebito"]) ?>">Compras Tarjeta de Débito</a>
+    </div>
+</div>
